# school21-case

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
nginx/: nginx.conf
nginx/config/: common_location.conf  compress.conf  ssl.conf
school21_case/: manage.py
school21_case/groups/: admin.py  forms.py  models.py  urls.py  views.py
school21_case/groups/migrations/: 0001_initial.py  0002_initial.py  0002_remove_group_logo_group_icon.py  0003_group_banner.py
school21_case/home/: urls.py  views.py
school21_case/school21_case/: asgi.py  settings.py  urls.py  wsgi.py
school21_case/templates/: about.html  base.html  help.html  index.html  profile.html  register.html  user_search.html
school21_case/templates/forms/: forms.html  main_search_form.html
school21_case/templates/groups/: create_group.html  delete_group.html  edit_group.html  find_groups.html  group_detail.html  group_members.html  my_groups.html
school21_case/templates/includes/: main_header.html  sidebar.html  sidebar_1.html  sidebar_2.html
school21_case/templates/users/: confirm_2fa.html  friends.html  login.html  profile.html  profile_edit.html  register.html  user_search.html
school21_case/users/: admin.py  forms.py  models.py  urls.py  views.py
school21_case/users/migrations/: 0001_initial.py  0002_alter_profile_age_alter_profile_gender.py  0002_alter_profile_friends.py  0003_alter_profile_gender.py  0004_alter_profile_age.py  0005_alter_profile_age_alter_profile_avatar_and_more.py
(+6 files in other folders)
