[project]
name = "school21-case"
version = "0.1.0"
description = "case for school21"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-archive>=0.2.0",
    "django-debug-toolbar>=4.4.6",
    "django==5.1.2",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.poetry]
package-mode = false
