[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A short description of your project"
authors = ["Your Name <you@example.com>"]

[project]
name = "school21-case"
version = "0.1.0"
description = "case for school21"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-archive>=0.2.0",
    "django-debug-toolbar>=4.4.6",
    "django==5.1.2",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

